# multibench

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/skills/create-tradition/: SKILL.md
.codev/: config.json
.codev/checks/: test.sh
apps/: README.md
apps/multibrowser/: .env.example  .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/multibrowser/src/: deploy.test.ts  main.tsx  (+3 more)
apps/tradition_validator/: README.md  pyproject.toml
apps/tradition_validator/tests/: conftest.py  test_band_names_normalized.py  test_cli_smoke.py  test_core.py  test_create_tradition_skill.py  test_docs.py  test_governance_docs.py  test_index.py  test_loaders.py  test_manifest.py  test_port_jaleesbench.py  test_port_sunni_islam.py  test_probes.py  test_prose.py  test_scenarios.py
apps/tradition_validator/tradition_validator/: __init__.py  __main__.py  cli.py  core.py  findings.py  loaders.py  models.py  port_jaleesbench.py  validator.py
codev/plans/: 1-traditions-folder-layout-spec-.md  7-jaleesbrowser-browse-explore-m.md  8-workflows-judging-the-judging-.md
codev/resources/: arch-critical.md  arch.md  lessons-critical.md  lessons-learned.md
codev/reviews/: 1-traditions-folder-layout-spec-.md  7-jaleesbrowser-browse-explore-m.md  8-workflows-judging-the-judging-.md
codev/specs/: 1-traditions-folder-layout-spec-.md  7-jaleesbrowser-browse-explore-m.md  8-workflows-judging-the-judging-.md
codev/state/: air-4_thread.md  air-5_thread.md  air-6_thread.md  bugfix-17_thread.md  main.md  spir-1_thread.md  spir-7_thread.md  spir-8_thread.md
docs/analysis/: README.md  multibench-impactbench-merge-analysis.md  synodiabench-ultracode-audit.md  ultracode-audit-rationale.md
traditions/: README.md
traditions/buddhism/: README.md  guide.md  source.md  tradition.yaml
traditions/eastern-christianity/: README.md  guide.md  source.md  tradition.yaml
traditions/islam/: README.md
traditions/judaism/: README.md  guide.md  source.md  tradition.yaml
traditions/secular-sage/: README.md  fact-check-watchlist.md  guide.md  source.md  tradition.yaml
traditions/sunni-islam/: README.md  guide.md  source.md  tradition.yaml
traditions/taoism/: README.md  guide.md  source.md  tradition.yaml
workflows/: README.md
workflows/judging/: .gitignore  README.md  pyproject.toml
workflows/judging/judging/: __init__.py  __main__.py  cli.py  collect.py  config.py  core_imports.py  judge.py  loaders.py  pipeline.py  prompts.py  providers.py  report.py  rubric.py  scores.py
workflows/judging/tests/: conftest.py  test_cli_smoke.py  test_collect.py  test_config.py  test_config_file.py  test_core_imports.py  test_gemini_schema.py  test_judge.py  test_live.py  test_loaders.py  test_pipeline.py  test_prompts.py  test_providers.py  test_report.py  test_rubric.py  test_scores.py
(+1766 files in other folders)
