[project]
name = "judging"
version = "0.1.0"
description = "MultiBench judging workflow: LLM-as-judge scoring of assistant responses against each scenario's judge-guidance.md, on the canonical -1..+1 scale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "tradition_validator",
]

[project.scripts]
judging = "judging.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judging"]

# Single-source the universal core + format loaders: depend on the validator
# package by path (spec/issue: "don't fork divergently"). Provider SDKs
# (anthropic, google-genai) are added in Phase 3 — the phase that uses them —
# to keep earlier phases' environments minimal.
[tool.uv.sources]
tradition_validator = { path = "../../apps/tradition_validator", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
