[project]
name = "judging"
version = "0.1.0"
description = "MultiBench judging workflow: LLM-as-judge scoring of assistant responses against each scenario's judge-guidance.md, on the canonical -1..+1 scale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "pyyaml>=6.0",
    "tradition_validator",
]

[project.scripts]
judging = "judging.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judging"]

# Single-source the universal core + format loaders: depend on the validator
# package by path (spec/issue: "don't fork divergently"). The provider SDKs
# (anthropic, google-genai) are declared up front per the approved plan; they are
# used by providers.py in Phase 3 (the judge/subject completion seams).
[tool.uv.sources]
tradition_validator = { path = "../../apps/tradition_validator", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
